# memcached

./: Makefile.am  assoc.c  crawler.c  logger.c  memcached.c  memcached.h  thread.c
mtcp/apps/apache_benchmark/config/: arp.conf  route.conf
mtcp/apps/apache_benchmark/include/: ap_config_auto.h
mtcp/apps/apache_benchmark/srclib/apr/: apr-1-config  apr-config.out  apr.pc  config.nice  exports.c  libapr-1.la  libtool
mtcp/apps/apache_benchmark/srclib/apr-util/: apu-1-config  apu-config.out  config.nice  exports.c  libaprutil-1.la
mtcp/apps/apache_benchmark/srclib/apr-util/.libs/: libaprutil-1.lai  libaprutil-1.so.0.4.1
mtcp/apps/apache_benchmark/srclib/apr-util/dbd/: apr_dbd_sqlite3.la
mtcp/apps/apache_benchmark/srclib/apr/.libs/: libapr-1.lai  libapr-1.so.0.4.6
mtcp/apps/apache_benchmark/srclib/pcre/: dftables  libpcre.la
mtcp/apps/apache_benchmark/support/: ab
mtcp/apps/apache_benchmark/support-2/: ab
mtcp/apps/apache_benchmark/support-2/.libs/: ab  lt-ab
mtcp/apps/apache_benchmark/support-2/config/: arp.conf  mtcp.conf  route.conf
mtcp/apps/apache_benchmark/support/.libs/: ab  lt-ab
mtcp/apps/apache_benchmark/support/config/: mtcp.conf
mtcp/apps/example/: epserver  epserver.c  epserver.conf  epwget
mtcp/apps/example/config/: arp.conf  route.conf
mtcp/dpdk-16.11/: dpdkrc
mtcp/dpdk-16.11/examples/bond/bond/x86_64-native-linuxapp-gcc/: .bond_app.cmd  .main.o.cmd  .main.o.d  bond_app.map
mtcp/dpdk-16.11/examples/cmdline/cmdline/x86_64-native-linuxapp-gcc/: .cmdline.cmd  .commands.o.cmd  .commands.o.d  .main.o.cmd  .main.o.d  .parse_obj_list.o.cmd  .parse_obj_list.o.d
mtcp/dpdk-16.11/examples/distributor/distributor/x86_64-native-linuxapp-gcc/: .distributor_app.cmd  .main.o.cmd  .main.o.d  distributor_app.map
mtcp/dpdk-16.11/examples/exception_path/exception_path/x86_64-native-linuxapp-gcc/: .exception_path.cmd  .main.o.cmd  .main.o.d  exception_path
mtcp/dpdk-16.11/examples/helloworld/helloworld/x86_64-native-linuxapp-gcc/: .helloworld.cmd  .main.o.cmd  .main.o.d  helloworld.map
mtcp/dpdk-16.11/examples/ip_pipeline/ip_pipeline/x86_64-native-linuxapp-gcc/: .config_check.o.cmd  .config_check.o.d  .config_parse.o.cmd  .config_parse.o.d  .config_parse_tm.o.cmd  .config_parse_tm.o.d  .cpu_core_map.o.cmd  .cpu_core_map.o.d  .init.o.cmd  .init.o.d  .ip_pipeline.cmd  .main.o.cmd  .main.o.d  .parser.o.cmd  .parser.o.d  .pipeline_common_be.o.cmd  .pipeline_common_be.o.d  .pipeline_common_fe.o.cmd  .pipeline_common_fe.o.d  .pipeline_firewall.o.cmd  .pipeline_firewall.o.d  .pipeline_firewall_be.o.cmd  .pipeline_firewall_be.o.d  .pipeline_flow_actions.o.cmd  .pipeline_flow_actions.o.d  .pipeline_flow_actions_be.o.cmd  .pipeline_flow_actions_be.o.d  .pipeline_flow_classification.o.cmd  .pipeline_flow_classification.o.d  .pipeline_flow_classification_be.o.cmd  .pipeline_flow_classification_be.o.d  .pipeline_master.o.cmd  .pipeline_master.o.d  .pipeline_master_be.o.cmd  .pipeline_master_be.o.d  .pipeline_passthrough.o.cmd  .pipeline_passthrough.o.d  .pipeline_passthrough_be.o.cmd  .pipeline_passthrough_be.o.d  .pipeline_routing.o.cmd  (+7 more)
mtcp/dpdk-16.11/examples/ipsec-secgw/ipsec-secgw/x86_64-native-linuxapp-gcc/: .esp.o.cmd  .esp.o.d  .ipsec-secgw.cmd  .ipsec-secgw.o.cmd  .ipsec-secgw.o.d  .ipsec.o.cmd  .ipsec.o.d  .parser.o.cmd  .parser.o.d  .rt.o.cmd  .rt.o.d  .sa.o.cmd  .sa.o.d  .sp4.o.cmd  .sp4.o.d  .sp6.o.cmd  .sp6.o.d  ipsec-secgw.map
mtcp/dpdk-16.11/examples/ipv4_multicast/ipv4_multicast/x86_64-native-linuxapp-gcc/: .ipv4_multicast.cmd  .main.o.cmd  .main.o.d  ipv4_multicast
mtcp/dpdk-16.11/examples/kni/kni/x86_64-native-linuxapp-gcc/: .kni.cmd  .main.o.cmd  .main.o.d  kni
mtcp/dpdk-16.11/examples/l2fwd-crypto/l2fwd-crypto/x86_64-native-linuxapp-gcc/: .l2fwd-crypto.cmd  .main.o.cmd  .main.o.d  l2fwd-crypto  l2fwd-crypto.map
mtcp/dpdk-16.11/examples/l2fwd-jobstats/l2fwd-jobstats/x86_64-native-linuxapp-gcc/: .l2fwd-jobstats.cmd  .main.o.cmd  .main.o.d
mtcp/dpdk-16.11/examples/l2fwd-keepalive/l2fwd-keepalive/x86_64-native-linuxapp-gcc/: .l2fwd-keepalive.cmd  .main.o.cmd  .main.o.d  .shm.o.cmd  .shm.o.d
mtcp/dpdk-16.11/tools/: setup_iface_single_process.sh
mtcp/dpdk-16.11/x86_64-native-linuxapp-gcc/app/: cmdline_test.map  dpdk-pmdinfogen  test  testacl  testpipeline  testpipeline.map  testpmd
mtcp/dpdk-16.11/x86_64-native-linuxapp-gcc/kmod/: igb_uio.ko  rte_kni.ko
mtcp/dpdk-16.11/x86_64-native-linuxapp-gcc/lib/: ldflags.txt
mtcp/mtcp/src/: .addr_pool.d  .api.d  .arp.d  .config.d  .core.d  .cpu.d  .debug.d  .dpdk_module.d  .eth_in.d  .eth_out.d  .eventpoll.d  .fhash.d  .icmp.d  .io_module.d  .ip_in.d  .ip_out.d  .logger.d  .memory_mgt.d  .netmap_module.d  .pipe.d  .psio_module.d  .rss.d  .socket.d  .tcp_in.d  .tcp_out.d  .tcp_rb_frag_queue.d  .tcp_ring_buffer.d  .tcp_sb_queue.d  .tcp_send_buffer.d  .tcp_stream.d  .tcp_stream_queue.d  .tcp_util.d  .timer.d  api.c  config.c  core.c  dpdk_module.c  eth_in.c  eventpoll.c  io_module.c  (+4 more)
mtcp_file/: arp.conf  mtcp.conf  route.conf
(+194 files in other folders)
